--- a/dbconn.properties
+++ b/dbconn.properties
@@ -1,1 +1,5 @@
 # Database connection settings
+flightapp.server_url = localhost
+flightapp.database_name = flights
+flightapp.username = postgres
+flightapp.tablename_suffix = gcohen3
